# zephr-sdk

./: README.md
examples/anthropic-tool-use/: README.md  agent_handoff.py  requirements.txt
examples/crewai/: README.md  requirements.txt  zephr_crew.py
examples/langchain/: README.md  requirements.txt  zephr_tools.py
examples/openai-functions/: README.md  function_calling.py  requirements.txt
examples/webhook-receiver/: README.md  app.py  package.json  server.js
js/: .npmignore  LICENSE  README.md  api.js  cli.js  crypto.js  errors.js  index.js  limits.js  link.js  package.json  postinstall.js  sdk-api.js  sdk-crypto.js  sdk.js  types.d.ts
python/: README.md  pyproject.toml
python/src/zephr/: __init__.py  api.py  client.py  crypto.py  exceptions.py  limits.py  link.py  memory.py  types.py
