[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zephr"
version = "0.4.1"
description = "Secure one-time secret sharing with zero-knowledge encryption"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Zephr Technologies", email = "contact@zephr.io" }]
keywords = ["encryption", "secrets", "zero-knowledge", "aes-gcm", "one-time", "security", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Communications",
]
dependencies = [
    "cryptography>=43.0",
]

[project.urls]
Homepage = "https://zephr.io"
Repository = "https://github.com/zephr-io/zephr-sdk"
Documentation = "https://zephr.io/docs"
Issues = "https://github.com/zephr-io/zephr-sdk/issues"

[tool.hatch.envs.default]
dependencies = ["cryptography>=43.0"]

[tool.hatch.envs.default.scripts]
test = "python test_sdk.py"
